--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -2,20 +2,19 @@ name: Manual workflow
 
 on:
   workflow_dispatch:
-    inputs:
-      dataModules:
-        description: List of Data Modules to deploy
-        required: true
-        type: tag        
-      logLevel:
+    inputs:      
+      releaseDms:
         description: 'Log level'
         required: true
-        default: 'warning'
+        default: 'All'
         type: choice
         options:
-        - info
-        - warning
-        - debug
+        - All
+        - Specify DM's
+      dataModules:
+        description: List of Data Modules to deploy (comma separated)
+        required: true
+        type: text         
       tags:
         description: 'Test scenario tags'
         required: false
