--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -16,14 +16,15 @@ on:
         description: List of Data Modules to deploy (comma separated)
         required: true
         type: string         
-      tags:
-        description: 'Test scenario tags'
-        required: false
-        type: boolean
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
+      tag:
+        description: 'Tag to deploy'
         required: true
+        type: string
+        default: 'LATEST'
+      # environment:
+      #   description: 'Environment to run tests against'
+      #   type: environment
+      #   required: true
 
 jobs:
   log-the-inputs:
@@ -31,9 +32,9 @@ jobs:
     steps:
       - run: |
           echo "Log level: $RELEASE"
-          echo "Tags: $TAGS"
-          echo "Environment: $ENVIRONMENT"
+          echo "DMs lits: $DATA_MODULES"
+          echo "Tag: $TAG"
         env:
           RELEASE: ${{ inputs.releaseDms }}
           DATA_MODULES: ${{ inputs.dataModules }}
-          ENVIRONMENT: ${{ inputs.environment }}
+          TAG: ${{ inputs.tag }}
